--- a/html5website/style.css
+++ b/html5website/style.css
@@ -1,1 +1,139 @@
+/* * {
+    box-sizing: border-box;
+    padding: 0;
+    border: 0;
+    margin: 0;
+} */
+
+body {
+    font: 15px/1.5 Arial, Helvetica, san-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #f4f4f4;
+}
+
+/* Global */
+
+.container {
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+/* Header */
+
+header {
+    background-color: #35424a;
+    color: #fff;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: #e8491d 3px solid;
+}
+
+header a{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+ ul {
+    margin: 0;
+    padding: 0;
+    
+
+}
+
+.button_1 {
+    height: 38px;
+    background-color: #e8491d;
+    border: 0;
+    padding: 0 20px;
+    color: #fff;
+}
+
+header li {
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+
+}
+
+header #branding {
+    float: left;
+
+}
+
+header #branding h1{
+margin: 0;
+}
+
+header nav {
+    float: right;
+    margin-top: 10px;
+}
+
+header .highlight, header .current{
+    color: #e8491d;
+    font-weight: bold;
+}
+
+header a:hover {
+    color: #ccc;
+    font-weight: bold;
+}
+
+#showcase {
+    min-height: 400px;
+    background:url('./8dac2278-aef9-4a8c-bd68-739693d639c2.jpeg') no-repeat;
+    text-align: center;
+    color: #fff;
+}
+
+#showcase h1 {
+    margin-top: 100px;
+    font-size: 55px;
+    margin-bottom: 10px;
+}
+
+#showcase p {
+    font-size: 20px;
+}
+
+/*newsletter*/
+
+#newsletter {
+    padding: 15px;
+    color: #fff;
+    background-color: #35424a;
+}
+
+#newsletter h1{
+    float: left;
+
+}
+
+#newsletter form {
+    float: right;
+    margin-top: 15px;
+}
+
+#newsletter input[type="email"] {
+    padding: 4px;
+    height: 25px;
+    width: 250px;
+}
+
+/*boxes*/
+
+#boxes{
+    margin-top:20px;
+}
+
+#boxes .box {
+    float: left;
+    width: 30%;
+    padding: 10px;
+}
 
