--- a/html5website/style.css
+++ b/html5website/style.css
@@ -53,6 +53,15 @@ header a{
     color: #fff;
 }
 
+.dark {
+    padding: 15px;
+    background-color: #35424a;
+    color: #fff;
+    margin: 10px 0;
+
+
+}
+
 header li {
     float: left;
     display: inline;
@@ -135,5 +144,83 @@ header a:hover {
     float: left;
     width: 30%;
     padding: 10px;
+    text-align: center;
 }
 
+#boxes .box img{
+    width: 90px;
+}
+
+/*Sidebar*/
+
+aside#sidebar {
+    float: right;
+    width: 30%;
+    margin-top:10px;
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea {
+    width: 90%;
+    padding: 5px;
+} 
+
+/* Main-col */
+
+article#main-col{
+    float: left;
+    width: 65%;
+}
+
+/* Services*/
+ul#services li{
+    list-style: none;
+    padding: 20px;
+    border: #ccc solid 1px;
+    margin-bottom: 5px;
+    background-color: #e6e6e6;
+}
+
+
+footer {
+    padding: 20px;
+    margin-top: 20px;
+    color: #fff;
+    background-color: #e8491d;
+    text-align: center;
+}
+
+/* media queries */
+
+@media(max-width: 768px) {
+    header #branding,
+    header nav, 
+    header nav li, 
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box,
+    article#main-col,
+    aside#sidebar {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    header {
+        padding-bottom: 20px;
+    }
+
+    #showcase h1 {
+        margin-top: 40px;
+    }
+
+    #newsletter button, .quote button {
+        display: block;
+        width: 100%;
+    }
+
+    #newsletter form input[type="email"], .quote input, .quote textarea{
+        width: 100%;
+        margin-bottom: 5px;
+
+    }
+}
