--- a/website_flex_grid/css/style.css
+++ b/website_flex_grid/css/style.css
@@ -45,6 +45,13 @@ img {
     width: 100%;
 }
 
+/* Code Pre */
+code, pre {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+}
+
 /*navbar*/
 
 .navbar {
@@ -93,6 +100,10 @@ img {
     gap: 30px;
 }
 
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
     position: relative;
     top: 60px;
@@ -101,6 +112,7 @@ img {
     padding: 40px;
     z-index: 100;
     justify-content: flex-end;
+    animation: slideInFromRight 1s ease-in;
 
 }
 
@@ -249,6 +261,46 @@ img {
       margin: 0 10px;
   }
 
+  /* Animations */
+  @keyframes slideInFromLeft {
+      0% {
+          transform: translateX(-100%);
+      }
+
+      100% {
+          transform: translateX(0);
+      }
+  }
+
+  @keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
   /* Tablets and under */
 
   @media(max-width: 768px) {
@@ -256,7 +308,7 @@ img {
       .showcase .grid,
       .stats .grid,
       .cli .grid,
-      .cloud .grid {
+      .cloud .grid, .features-main .grid, .docs-main .grid {
           grid-template-columns: 1fr;
           grid-template-rows: 1fr;
       }
@@ -268,11 +320,13 @@ img {
       .showcase-text {
           text-align: center;
           margin-top: 40px;
+          animation: slideInFromTop 1s ease-in;
       }
 
       .showcase-form {
           justify-self: center;
           margin: auto;
+          animation: slideInFromBottom 1s ease-in;
       }
 
       .cli .grid > *:first-child {
@@ -280,6 +334,17 @@ img {
         grid-row: 1;
     }
 
+    .features-head, .features-sub-head, .docs-head {
+        text-align: center;
+    }
+
+    .features-head img, .features-sub-head img, .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid >*:first-child, .features-main .grid > *:nth-child(2) {
+        grid-column: 1;
+    }
   }
 
   /*Mobile*/
