--- a/microsoft_clone/style.css
+++ b/microsoft_clone/style.css
@@ -82,6 +82,15 @@ ul {
     opacity: 0.9;
 }
 
+.dark {
+    color: #fff;
+}
+
+.dark .btn {
+    background-color: #f4f4f4;
+    color: #333;
+}
+
 /* Showcase */
 
 .showcase {
@@ -105,4 +114,66 @@ ul {
 
 .showcase .btn {
     margin-top: 20px; 
+}
+
+/* Home Cards */
+
+.home-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 40px;
+}
+
+.home-cards img {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.homecards h3 {
+    margin-bottom: 5px;
+
+}
+
+.home-cards a {
+    display: inline-block;
+    padding-top: 10px;
+    color: #006788;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.home-cards a:hover i {
+    margin-left: 10px;
+}
+/* Xbox  */
+
+.xbox {
+    height: 350px;
+    width: 100%;
+    background-image: url() no-repeat center center/cover;
+    margin-bottom: 20px;
+}
+
+.xbox .content {
+    width: 40%;
+    padding: 50px 0 0 30px;
+}
+
+.xbox p, .carbon p {
+    margin: 10px 0 20px;
+}
+
+/* Carbon */
+.carbon {
+    height: 350px;
+    width: 100%;
+    background: url() no-repeat center center/cover;
+
+}
+
+.carbon .content {
+    width: 55%;
+    padding: 100px 0 0 30px;
+
 }
