--- a/angency_website/style.css
+++ b/angency_website/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
 :root {
     --primary-color: #f60f20;
@@ -11,7 +12,7 @@
 }
 
 html, body {
-    font-family: 'Lato' sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #111;
 
 }
@@ -35,10 +36,16 @@ p {
 
 section {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     align-items: center;
     padding: 100px;
-   
+    margin-top: 60px;
+}
+
+section.home {
+    flex-direction: row;
+    margin-top: 0;
 }
 /* button */
 
@@ -163,6 +170,83 @@ section {
     align-items: center;
 }
 
+/* Services page */
+
+.services {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    text-align: center;
+}
+
+.services .service .icon img {
+    max-width: 100px;
+}
+
+.services .service {
+    padding: 30px;
+    
+}
+
+.services .service:hover {
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.services .service h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 20px;
+    color: #1b206e;
+}
+
+/* Work Page */
+
+.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.portfolio .item {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 5px;
+}
+
+.portfolio .item img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio .item .action {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+}
+
+.portfolio .item .action a {
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 5px 15px;
+}
+
+.portfolio .item:hover .action {
+    opacity: 1;
+    transition: 0.5s;
+}
+
 @media(max-width: 1068px) {
     .home-img {
         display: none;
@@ -180,5 +264,22 @@ section {
 
     .navigation ul li a {
         font-size: 2rem;
+    }
+
+    .services {
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
+}
+
+@media(max-width: 768px) {
+
+    .services {
+        grid-template-columns: 1fr;
+        
+    }
+
+    .services .service {
+        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
 }
