--- a/website_flex_grid/css/style.css
+++ b/website_flex_grid/css/style.css
@@ -347,6 +347,11 @@ code, pre {
     }
   }
 
+  a {
+      text-decoration: underline;
+      border: 2px solid #fff;
+  }
+
   /*Mobile*/
 
   @media(max-width: 500px) {
